[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Atarify.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main_Menu.gd" type="Script" id=2]
[ext_resource path="res://Main_Menu.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.235294, 0.317647, 0.52549, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 626.0
margin_top = 453.0
margin_right = 1293.0
margin_bottom = 626.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 667.0
margin_bottom = 71.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 667.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "3D Platformer"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 667.0
margin_bottom = 75.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 333.0
margin_right = 333.0

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 667.0
margin_bottom = 124.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 208.0
margin_right = 458.0
margin_bottom = 45.0

[node name="Cursor" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 75.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "-->"

[node name="Start" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 79.0
margin_right = 250.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 667.0
margin_bottom = 173.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 233.0
margin_right = 433.0
margin_bottom = 45.0

[node name="Cursor2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer2"]
margin_right = 75.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "-->"

[node name="Exit" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer2"]
margin_left = 79.0
margin_right = 200.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
